objects/Batch_Failure__c.object
<CustomObject>
    <description>Castiron nightly batch use table for results</description>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Id__c</fullName>
        <label>sObject Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Batch Failure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Error_Type__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Line_Number__c</columns>
        <columns>sObject_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Todays_Batch_Failures</fullName>
        <columns>NAME</columns>
        <columns>Error_Type__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Line_Number__c</columns>
        <columns>sObject_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Batch Failures</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Batch Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Failures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>